# colombia-elections-analysis-app

./: .dockerignore  .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/src/controllers/: USE.txt
backend/src/middleware/: USE.txt
backend/src/models/: USE.txt
backend/src/routes/: USE.txt
docker/postgres.init/: 1-schema.sql  2-copy-data.sql
duckdb/: python-api.py
frontend/: .gitignore  package-lock.json  package.json
scripts/docker/: docker-setup.sh
scripts/docker/db.init/: 1-schema.sql  2-copy-data.sql
src/api/: main.py
src/dashboard/analysis/: presidential.ipynb  senate.ipynb
src/pipeline/: extract.py  load.py  transform.py  utils.py
